--- a/style.css
+++ b/style.css
@@ -37,21 +37,34 @@ img.alignright    { padding-left: 5px; }
    ========================================================================== */
 
 body {
-  color:#FFF;
-  background-color: #222;
+  color: #444;
+  background-color: #FFF;
   font-size: 1em;
   font-family: Futura, Helvetica, sans-serif;
+  text-align: center;
+  line-height: 1.5em;
 }
 
 a {
   color:#D12028;
   text-decoration: none;
 }
+h2 {
+  text-transform: uppercase;
+  font-size: 2em;
+  display: inline-block;
+}
+
+h2 {
+  margin:10% 1% 5%;
+}
 
 .innerWrapper {
   max-width:1024px;
   margin:0 auto;
   padding-top:1%;
+  border-left: 5px double #222;
+  border-right: 5px double #222;
 }
 
 .left {
@@ -62,7 +75,14 @@ a {
 }
 
 .full {
-  width:100%;
+  width:60%;
+  margin: 0 auto;
+}
+
+.button {
+  padding: 1% 3%;
+  border: 1px double blue;
+  display:inline-block;
 }
 
 /* =============================================================================
@@ -70,11 +90,17 @@ a {
    ========================================================================== */
 header {
   background-color: #222;
+  color:#FFF;
+  padding-bottom: 3%;
 }
 header img {
   width:80%;
   display: block;
   margin:0 auto;
+}
+
+header h1 {
+  margin-bottom:0;
 }
 
 /* =============================================================================
@@ -110,13 +136,15 @@ header img {
 
 ul.menu {
   text-align: center;
+  padding-left: 20px;
 }
 ul.menu li {
+  font-size: 0.8em;
   list-style: none;
   display:inline-block;
   text-align: center;
   text-transform: uppercase;
-  margin: 0 4%;
+  margin: 0 3%;
   border-bottom:4px double #FFF;
   padding:0 1% 0.5% 1%;
   transition: border-color 0.3s;
@@ -131,8 +159,13 @@ ul.menu a {
 }
 
 /* =============================================================================
-                   About Section
+                  Sections
    ========================================================================== */
+.about {
+  height: 500px; /*change this*/
+  border-top: none;
+}
+
 
 
 
