--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ body {
 a {
   color:#36D7B7;
   text-decoration: none;
+  transition:color 0.3s;
+}
+
+a:hover {
+  color:#444;
 }
 
 h2 {
@@ -214,12 +219,32 @@ li a {
   color:#FFF;
 }
 
+li a:hover {
+  color:#FFF;
+}
+
+.toTop {
+  background: url("images/background.png");
+  width: 50px;
+  border: 3px double #444;
+  position: fixed;
+  bottom:15px;
+  right:30px;
+  z-index: 9000;
+  display:none;
+}
+
+a.toTop {
+  color:#D91E18;
+  text-transform: uppercase;
+}
+
 /* =============================================================================
                   Sections
    ========================================================================== */
 .about {
   border-top: none;
-  margin-top:10%;
+  padding-top:10%;
 }
 
 .about p {
@@ -227,12 +252,13 @@ li a {
 }
 
 .portfolio {
-  margin-top:10%;
+  padding-top:10%;
 }
 
 .contact {
-  margin: 10% auto;
+  margin: 0 auto 15%;
   width:80%;
+  padding-top:10%;
 }
 
 .socialBoxes {
@@ -247,13 +273,12 @@ li a {
   margin:0 3%;
   display:inline-block;
   background-color: #FFF;
-  transition: background-color 0.3s;
   -webkit-transform:rotate(-45deg);
   transform:rotate(45deg);
 }
 
 .socialBox:hover {
-  background-color: rgba(0,0,0,0.1);
+  background:url("images/background.png");
 }
 
 .controlTwitter {
@@ -283,7 +308,7 @@ video[poster*="images"] {
 }
 
 .techDescription {
-  color:#D91E18;
+  color:#E08283;
 }
 
 /* =============================================================================
