--- a/mq.css
+++ b/mq.css
@@ -1,21 +1,66 @@
 @media (max-width: 1000px) {
   #wpadminbar { border-left:10px solid red !important; }
   
-  .section {
-    padding:10px;
-  }
 }
 
 @media (max-width: 768px) {
   #wpadminbar { border-left:10px solid green !important; }
 
-  .left, .sidebar {
-    width:100%;
-    clear:both;
-  }
 
 }
 
 @media (max-width: 480px) {
   #wpadminbar { border-left:10px solid yellow !important; }
+  .home nav {
+    width:100%;
+  }
+  .home .innerwrapper, .home .portfolio, .home .contact {
+    width:95%;
+  }
+
+  .home nav li {
+    margin-right:2%;
+    margin-left:2%;
+  }
+
+  .home h1 img {
+    width:90%;
+  }
+
+  .home .sectionHeadingContainer h2 {
+    font-size:1.5em;
+  }
+
+  .home .sectionHeadingContainer img {
+    width:25%;
+  }
+
+  .home .about {
+    width:100%;
+  }
+  
+  .home .headshot {
+    width:50%;
+    margin:5% auto;
+    float:none;
+  }
+  .home .headshot img {
+    width:100%;
+    display:block;
+  }
+  .home .textAndButton {
+    float:none;
+    width:95%;
+    margin:0 auto;
+    margin-top:20%;
+  }
+
+  .home .portfolioPiece {
+    width:90%;
+    margin:0 auto;
+  }
+
+  .home .controlTwitter {
+    display:none;
+  }
 }
