--- a/style.css
+++ b/style.css
@@ -65,7 +65,11 @@ h2 {
   text-transform: uppercase;
   font-size: 2em;
   display: inline-block;
-  margin:0 1% 10%;
+  margin-bottom:0;
+}
+
+.sectionHeadingContainer {
+  margin-bottom: 15%;
 }
 
 .fa {
@@ -90,11 +94,6 @@ h2 {
 .left {
   width:80%;
   margin:5% auto 15%;
-}
-
-.full {
-  width:75%;
-  margin: 0 auto;
 }
 
 .button a {
@@ -267,6 +266,8 @@ a.toTop {
 .about {
   border-top: none;
   padding-top:10%;
+  width:80%;
+  margin:0 auto;
 }
 
 .about p {
@@ -286,6 +287,7 @@ a.toTop {
 .socialBoxes {
   width:100%;
   margin-top:15%;
+  clear:both;
 }
 
 .socialBox {
